@@ -82,7 +82,6 @@ receiver_host =
 # to the master node
 receiver_ports = 1912-1930
 authkey = changeme
-cache = off
 
 [webapi]
 server = http://localhost:8800
