@@ -38,7 +38,6 @@ truncation_level = 3
 maximum_distance = {'Active Shallow Crust': 300}
 minimum_magnitude = 4.0
 pointsource_distance = 100.0
-cache_distances = true
 
 [output]
 
